--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.49.1",
-    "@types/node": "^22.10.1"
+    "@types/node": "^22.10.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2"
+  },
+  "compilerOptions": {
+    "noUnusedLocals": false,
+      "module": "ESNext",
+      "target": "ES6",
+      "strict": true,
+      "esModuleInterop": true
+    
   }
 }
